# magiclaude

./: README.md  pyproject.toml
labextension/: package.json  tsconfig.json  webpack.config.js
labextension/schema/: plugin.json
labextension/src/: api.ts  index.ts  ops.ts  types.ts
magiclaude/: __init__.py  claude_local_runner.py  claude_remote_client.py  routing.py  schema.py  server_extension.py
magiclaude_broker/: app.py  runner.py
