[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magiclaude"
version = "0.1.0"
description = "Minimal Jupyter extension to drive Claude notebook edits from block triggers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jupyter_server>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.6.0",
  "httpx>=0.27.0"
]

[tool.setuptools]
packages = ["magiclaude"]
